add_subdirectory(test-laplace-petsc3d)
add_subdirectory(test-laplace-petsc3d-2)
add_subdirectory(test-laplace-petsc3d-3)
add_subdirectory(test-laplace-petsc3d-4)
add_subdirectory(test-laplace-petsc3d-5)
add_subdirectory(test-laplace-petsc3d-6)
add_subdirectory(test-laplace-petsc3d-7)
add_subdirectory(test-laplace-petsc3d-8)
add_subdirectory(test-laplace-petsc3d-9)
add_subdirectory(test-laplace-petsc3d-10)
add_subdirectory(test-laplace-petsc3d-11)
add_subdirectory(test-laplace-petsc3d-12)
add_subdirectory(test-laplace-petsc3d-13)
add_subdirectory(test-laplace-petsc3d-14)
add_subdirectory(test-laplace-petsc3d-15)
#add_subdirectory(test-laplace-petsc3d-16)
#add_subdirectory(test-laplace-petsc3d-17)
#add_subdirectory(test-laplace-petsc3d-18)
#add_subdirectory(test-laplace-petsc3d-19)
#add_subdirectory(test-laplace-petsc3d-20)
#add_subdirectory(test-laplace-petsc3d-21)
#add_subdirectory(test-laplace-petsc3d-22)
#add_subdirectory(test-laplace-petsc3d-23)
#add_subdirectory(test-laplace-petsc3d-24)
#add_subdirectory(test-laplace-petsc3d-25)
#add_subdirectory(test-laplace-petsc3d-26)
#add_subdirectory(test-laplace-petsc3d-27)
#add_subdirectory(test-laplace-petsc3d-28)
#add_subdirectory(test-laplace-petsc3d-29)
#add_subdirectory(test-laplace-petsc3d-30)
#add_subdirectory(test-laplace-petsc3d-31)
#add_subdirectory(test-laplace-petsc3d-32)
#add_subdirectory(test-laplace-petsc3d-33)
#add_subdirectory(test-laplace-petsc3d-34)
#add_subdirectory(test-laplace-petsc3d-35)
#add_subdirectory(test-laplace-petsc3d-36)
#add_subdirectory(test-laplace-petsc3d-37)
#add_subdirectory(test-laplace-petsc3d-38)
#add_subdirectory(test-laplace-petsc3d-39)
#add_subdirectory(test-laplace-petsc3d-40)
#add_subdirectory(test-laplace-petsc3d-41)
#add_subdirectory(test-laplace-petsc3d-42)
#add_subdirectory(test-laplace-petsc3d-43)
#add_subdirectory(test-laplace-petsc3d-44)
#add_subdirectory(test-laplace-petsc3d-45)
#add_subdirectory(test-laplace-petsc3d-46)
#add_subdirectory(test-laplace-petsc3d-47)
#add_subdirectory(test-laplace-petsc3d-48)
#add_subdirectory(test-laplace-petsc3d-49)
#add_subdirectory(test-laplace-petsc3d-50)
